[tool.poetry]
name = "youtube-mp3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "youtube_mp3"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
youtube-dl = "^2021.12.17"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
